--- a/yjk-web/src/main/report/drugdeclaretongji.jrxml
+++ b/yjk-web/src/main/report/drugdeclaretongji.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="commonname" language="groovy" pageWidth="1350" pageHeight="842" columnWidth="1350" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="commonname" language="groovy" pageWidth="1640" pageHeight="842" columnWidth="1640" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0">
 	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="32"/>
+	<property name="ireport.x" value="322"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="systemParameterId" class="java.lang.Integer">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
@@ -9,27 +9,45 @@
 	<parameter name="realname" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
+	<parameter name="auditstatus" class="java.lang.String">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
+	<parameter name="drugcategory" class="java.lang.String">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
+	<parameter name="declarecategory" class="java.lang.String">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
+	<parameter name="departname" class="java.lang.String">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
 	<queryString>
-		<![CDATA[SELECT declare_date, declare_reason, dosage, indications_effect, remark, t2.realname,
-t3.name,t4.common_name,t4.administration_id,t4.pill,t4.specifications,t4.medical_category,
+		<![CDATA[SELECT declare_date, declare_reason, dosage, indications_effect, remark,declarecategory,
+case when is_preparationed then '是' else '否' end as preparationed,constituent,t2.realname,
+t4.common_name,t4.administration_id,t4.pill,t4.specifications,t4.medical_category,
 t5.common_name as extract_common_name,t5.match_number,t5.chemical_big_category,t5.chemical_sub_category,
 case when t5.is_antibacterialsed then '是' else '否' end as antibacterialsed,
-case when t5.drugcategory = 'H' then '西药' when drugcategory = 'Z' then '中成药' else '其他' end as drugcategory
+case when t5.drugcategory = 'H' then '西药' when drugcategory = 'Z' then '中成药' else '其他' end as drugcategory,
+(select string_agg(t7.name,',') from sec_organization t7 where t7.id in (select t6.organization_id from sec_user_organization_job t6 where t6.user_id=t1.user_id)) as departname,case when auditstatus ='nodeclare' then '未申报' when auditstatus ='init' then '等待初审' when auditstatus ='passed' then '初审通过' when auditstatus ='un_passed' then '初审不通过' else '其他' end as auditstatus
 FROM sb_drug_form t1
 left join sec_user t2 on t1.user_id=t2.id
-left join sec_department_attribute t3 on t2.department_attribute_id = t3.id
 left join zd_common_name_contents t4 on t1.commonnamecontents_id=t4.id
 left join zd_common_name t5 on t4.common_name_id=t5.id
-where auditstatus='passed' and system_parameter_id =$P{systemParameterId} and t2.realname like '%'||$P{realname}||'%'
-]]>
+where (t1.system_parameter_id =$P{systemParameterId} or $P{systemParameterId} is null)
+and t1.auditstatus like '%'||$P{auditstatus}||'%' and  t2.realname like '%'||$P{realname}||'%'
+and t5.drugcategory like  '%'||$P{drugcategory}||'%' and (t1.declarecategory like '%'||$P{declarecategory}||'%' or $P{declarecategory}='')
+and ((select string_agg(t7.name,',') from sec_organization t7 where t7.id in (select t6.organization_id from sec_user_organization_job t6 where t6.user_id=t1.user_id)) like '%'||$P{departname}||'%' or $P{departname} = '')
+order by t1.auditstatus]]>
 	</queryString>
 	<field name="declare_date" class="java.sql.Timestamp"/>
 	<field name="declare_reason" class="java.lang.String"/>
 	<field name="dosage" class="java.lang.String"/>
 	<field name="indications_effect" class="java.lang.String"/>
 	<field name="remark" class="java.lang.String"/>
+	<field name="declarecategory" class="java.lang.String"/>
+	<field name="preparationed" class="java.lang.String"/>
+	<field name="constituent" class="java.lang.String"/>
 	<field name="realname" class="java.lang.String"/>
-	<field name="name" class="java.lang.String"/>
 	<field name="common_name" class="java.lang.String"/>
 	<field name="administration_id" class="java.lang.Long"/>
 	<field name="pill" class="java.lang.String"/>
@@ -41,8 +59,10 @@ where auditstatus='passed' and system_parameter_id =$P{systemParameterId} and t2
 	<field name="chemical_sub_category" class="java.lang.String"/>
 	<field name="antibacterialsed" class="java.lang.String"/>
 	<field name="drugcategory" class="java.lang.String"/>
+	<field name="departname" class="java.lang.String"/>
+	<field name="auditstatus" class="java.lang.String"/>
 	<variable name="index" class="java.lang.Integer" calculation="Count">
-		<variableExpression><![CDATA[$V{index}.valueOf(1) ]]></variableExpression>
+		<variableExpression><![CDATA[$V{index}.valueOf(1)]]></variableExpression>
 		<initialValueExpression><![CDATA[1]]></initialValueExpression>
 	</variable>
 	<background>
@@ -103,7 +123,7 @@ where auditstatus='passed' and system_parameter_id =$P{systemParameterId} and t2
 				<text><![CDATA[中/西类别]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="1127" y="0" width="53" height="29"/>
+				<reportElement x="1310" y="0" width="53" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -129,7 +149,7 @@ where auditstatus='passed' and system_parameter_id =$P{systemParameterId} and t2
 				<text><![CDATA[给药途径]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="492" y="0" width="41" height="29"/>
+				<reportElement x="545" y="0" width="41" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -142,7 +162,7 @@ where auditstatus='passed' and system_parameter_id =$P{systemParameterId} and t2
 				<text><![CDATA[医保类别]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="883" y="0" width="244" height="12"/>
+				<reportElement x="1066" y="0" width="108" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -152,20 +172,7 @@ where auditstatus='passed' and system_parameter_id =$P{systemParameterId} and t2
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="文鼎ＰＬ简报宋" size="8"/>
 				</textElement>
-				<text><![CDATA[药理分类]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="883" y="12" width="108" height="17"/>
-				<box>
-					<topPen lineWidth="0.5"/>
-					<leftPen lineWidth="0.5"/>
-					<bottomPen lineWidth="0.5"/>
-					<rightPen lineWidth="0.5"/>
-				</box>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="文鼎ＰＬ简报宋" size="8"/>
-				</textElement>
-				<text><![CDATA[大类]]></text>
+				<text><![CDATA[药理大类]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="0" y="0" width="29" height="29"/>
@@ -207,20 +214,7 @@ where auditstatus='passed' and system_parameter_id =$P{systemParameterId} and t2
 				<text><![CDATA[规格]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="533" y="0" width="99" height="29"/>
-				<box>
-					<topPen lineWidth="0.5"/>
-					<leftPen lineWidth="0.5"/>
-					<bottomPen lineWidth="0.5"/>
-					<rightPen lineWidth="0.5"/>
-				</box>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="文鼎ＰＬ简报宋" size="8"/>
-				</textElement>
-				<text><![CDATA[用法用量]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="632" y="0" width="152" height="29"/>
+				<reportElement x="815" y="0" width="152" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -233,7 +227,7 @@ where auditstatus='passed' and system_parameter_id =$P{systemParameterId} and t2
 				<text><![CDATA[适应症及药理作用/（功能主治）]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="784" y="0" width="99" height="29"/>
+				<reportElement x="967" y="0" width="99" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -246,7 +240,7 @@ where auditstatus='passed' and system_parameter_id =$P{systemParameterId} and t2
 				<text><![CDATA[申请理由]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="991" y="12" width="136" height="17"/>
+				<reportElement x="1174" y="0" width="136" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -256,10 +250,10 @@ where auditstatus='passed' and system_parameter_id =$P{systemParameterId} and t2
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="文鼎ＰＬ简报宋" size="8"/>
 				</textElement>
-				<text><![CDATA[小类]]></text>
+				<text><![CDATA[药理小类]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="1180" y="0" width="53" height="29"/>
+				<reportElement x="1429" y="0" width="53" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -272,7 +266,7 @@ where auditstatus='passed' and system_parameter_id =$P{systemParameterId} and t2
 				<text><![CDATA[申请科室]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="1233" y="0" width="39" height="29"/>
+				<reportElement x="1482" y="0" width="39" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -285,7 +279,7 @@ where auditstatus='passed' and system_parameter_id =$P{systemParameterId} and t2
 				<text><![CDATA[申请医生]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="1272" y="0" width="78" height="29"/>
+				<reportElement x="1521" y="0" width="78" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -296,6 +290,71 @@ where auditstatus='passed' and system_parameter_id =$P{systemParameterId} and t2
 					<font fontName="文鼎ＰＬ简报宋" size="8"/>
 				</textElement>
 				<text><![CDATA[提交申请时间]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="716" y="0" width="99" height="29"/>
+				<box>
+					<topPen lineWidth="0.5"/>
+					<leftPen lineWidth="0.5"/>
+					<bottomPen lineWidth="0.5"/>
+					<rightPen lineWidth="0.5"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="文鼎ＰＬ简报宋" size="8"/>
+				</textElement>
+				<text><![CDATA[用法用量]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="492" y="0" width="53" height="29"/>
+				<box>
+					<topPen lineWidth="0.5"/>
+					<leftPen lineWidth="0.5"/>
+					<bottomPen lineWidth="0.5"/>
+					<rightPen lineWidth="0.5"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="文鼎ＰＬ简报宋" size="8"/>
+				</textElement>
+				<text><![CDATA[是否复方制剂]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="586" y="0" width="130" height="29"/>
+				<box>
+					<topPen lineWidth="0.5"/>
+					<leftPen lineWidth="0.5"/>
+					<bottomPen lineWidth="0.5"/>
+					<rightPen lineWidth="0.5"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="文鼎ＰＬ简报宋" size="8"/>
+				</textElement>
+				<text><![CDATA[成分]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="1363" y="0" width="66" height="29"/>
+				<box>
+					<topPen lineWidth="0.5"/>
+					<leftPen lineWidth="0.5"/>
+					<bottomPen lineWidth="0.5"/>
+					<rightPen lineWidth="0.5"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="文鼎ＰＬ简报宋" size="8"/>
+				</textElement>
+				<text><![CDATA[申报类型（新增通用名、规格）]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="1599" y="0" width="41" height="29"/>
+				<box>
+					<topPen lineWidth="0.5"/>
+					<leftPen lineWidth="0.5"/>
+					<bottomPen lineWidth="0.5"/>
+					<rightPen lineWidth="0.5"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="文鼎ＰＬ简报宋" size="8"/>
+				</textElement>
+				<text><![CDATA[审核状态]]></text>
 			</staticText>
 		</band>
 	</title>
@@ -360,7 +419,7 @@ where auditstatus='passed' and system_parameter_id =$P{systemParameterId} and t2
 				<textFieldExpression><![CDATA[$F{drugcategory}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="1127" y="0" width="53" height="29"/>
+				<reportElement x="1310" y="0" width="53" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -386,7 +445,7 @@ where auditstatus='passed' and system_parameter_id =$P{systemParameterId} and t2
 				<textFieldExpression><![CDATA[$F{administration_id}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="492" y="0" width="41" height="29"/>
+				<reportElement x="545" y="0" width="41" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -399,7 +458,7 @@ where auditstatus='passed' and system_parameter_id =$P{systemParameterId} and t2
 				<textFieldExpression><![CDATA[$F{medical_category}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="883" y="0" width="108" height="29"/>
+				<reportElement x="1066" y="0" width="108" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -412,7 +471,7 @@ where auditstatus='passed' and system_parameter_id =$P{systemParameterId} and t2
 				<textFieldExpression><![CDATA[$F{chemical_big_category}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="991" y="0" width="136" height="29"/>
+				<reportElement x="1174" y="0" width="136" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -465,7 +524,7 @@ where auditstatus='passed' and system_parameter_id =$P{systemParameterId} and t2
 				<textFieldExpression><![CDATA[$F{specifications}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="533" y="0" width="99" height="29"/>
+				<reportElement x="716" y="0" width="99" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -478,7 +537,7 @@ where auditstatus='passed' and system_parameter_id =$P{systemParameterId} and t2
 				<textFieldExpression><![CDATA[$F{dosage}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="632" y="0" width="152" height="29"/>
+				<reportElement x="815" y="0" width="152" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -491,7 +550,7 @@ where auditstatus='passed' and system_parameter_id =$P{systemParameterId} and t2
 				<textFieldExpression><![CDATA[$F{indications_effect}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="784" y="0" width="99" height="29"/>
+				<reportElement x="967" y="0" width="99" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -504,7 +563,7 @@ where auditstatus='passed' and system_parameter_id =$P{systemParameterId} and t2
 				<textFieldExpression><![CDATA[$F{declare_reason}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="1180" y="0" width="53" height="29"/>
+				<reportElement x="1429" y="0" width="53" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -514,10 +573,10 @@ where auditstatus='passed' and system_parameter_id =$P{systemParameterId} and t2
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="文鼎ＰＬ简报宋" size="8"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{name}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{departname}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="1233" y="0" width="39" height="29"/>
+				<reportElement x="1482" y="0" width="39" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -530,7 +589,7 @@ where auditstatus='passed' and system_parameter_id =$P{systemParameterId} and t2
 				<textFieldExpression><![CDATA[$F{realname}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="1272" y="0" width="78" height="29"/>
+				<reportElement x="1521" y="0" width="78" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -541,6 +600,58 @@ where auditstatus='passed' and system_parameter_id =$P{systemParameterId} and t2
 					<font fontName="文鼎ＰＬ简报宋" size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA[(new SimpleDateFormat("yyyy年MM月dd日")).format($F{declare_date})]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="492" y="0" width="53" height="29"/>
+				<box>
+					<topPen lineWidth="0.5"/>
+					<leftPen lineWidth="0.5"/>
+					<bottomPen lineWidth="0.5"/>
+					<rightPen lineWidth="0.5"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="文鼎ＰＬ简报宋" size="8"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{preparationed}]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement x="586" y="0" width="130" height="29"/>
+				<box>
+					<topPen lineWidth="0.5"/>
+					<leftPen lineWidth="0.5"/>
+					<bottomPen lineWidth="0.5"/>
+					<rightPen lineWidth="0.5"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="文鼎ＰＬ简报宋" size="8"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{constituent}]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement x="1363" y="0" width="66" height="29"/>
+				<box>
+					<topPen lineWidth="0.5"/>
+					<leftPen lineWidth="0.5"/>
+					<bottomPen lineWidth="0.5"/>
+					<rightPen lineWidth="0.5"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="文鼎ＰＬ简报宋" size="8"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{declarecategory}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="1599" y="0" width="41" height="29"/>
+				<box>
+					<topPen lineWidth="0.5"/>
+					<leftPen lineWidth="0.5"/>
+					<bottomPen lineWidth="0.5"/>
+					<rightPen lineWidth="0.5"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="文鼎ＰＬ简报宋" size="8"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{auditstatus}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
