--- a/yjk-web/src/main/webapp/WEB-INF/static/css/menuicon.css
+++ b/yjk-web/src/main/webapp/WEB-INF/static/css/menuicon.css
@@ -88,3 +88,5 @@
 .rmyy-yjk-technicaltitle-tree{background:url('../image/menu/yjk/technicaltitle.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
 .rmyy-yjk-appointment{background:url('../image/menu/yjk/appointment.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
 .rmyy-yjk-appointment-tree{background:url('../image/menu/yjk/appointment.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
+.rmyy-system-notice{background:url('../image/menu/system/notice.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
+.rmyy-system-notice-tree{background:url('../image/menu/system/notice.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
